--- a/.github/workflows/idk.yml
+++ b/.github/workflows/idk.yml
@@ -14,7 +14,7 @@ jobs:
       with:
         repository: smogon/pokemon-showdown
         path: pokemon-showdown
-    - name: Set up python 3.7.9
+    - name: Set up node
       uses: actions/setup-node@v2
     - name: Build pokemon showdown
       run: pokemon-showdown/build
