--- a/.github/workflows/idk.yml
+++ b/.github/workflows/idk.yml
@@ -22,7 +22,7 @@ jobs:
       run: |
         echo 'const fs = require("fs");
               const Sim = require("./pokemon-showdown");
-              fs.writeFileSync("out.json", JSON.stringify(Sim.Dex.data.Pokedex, null, 2));
+              fs.writeFileSync("cerbottana/out.json", JSON.stringify(Sim.Dex.data.Pokedex, null, 2));
         ' | node -
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@45c510e1f68ba052e3cd911f661a799cfb9ba3a3
